--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3"
 js-sys = "0.3"
+implicit-clone = { version = "0.3.9", features = ["serde"] }
+ron = "0.8.1"
+lazy_static = "1.4.0"
+rand = "0.8.5"
+getrandom = { version = "0.2.11", features = ["js"] }
 
 [workspace]
 members = ["src-tauri"]
