--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ js-sys = "0.3"
 implicit-clone = { version = "0.4.8", features = ["serde"] }
 ron = "0.8.1"
 lazy_static = "1.4.0"
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["std"] }
 getrandom = { version = "0.2.11", features = ["js"] }
 yew-hooks = "0.3"
 
